bug fixes to itinerary queries to get distinct participant counts, added collapse bar to bottom of itinerary stops, more ui tweaks and fixes, added borders to periods and stops
Related Work Items: #10820, #10824

--- a/App/ECA.WebApp.AngularJS/styles/_lists.scss
+++ b/App/ECA.WebApp.AngularJS/styles/_lists.scss
@@ -346,7 +346,9 @@
 
 
     .itinerary-container {
-        border-bottom: 1px solid $lightgray;
+        border-bottom: 1px solid $mediumgray;
+        border-left: 1px solid $mediumgray;
+        border-right: 1px solid $mediumgray;
     }
 
     .itinerary-stop-header {
@@ -359,10 +361,12 @@
     }
 
     .itinerary-stop-container {
-        border-bottom: 1px solid $lightgray;
+        border-bottom: 1px solid $mediumgray;
+        border-left: 1px solid $mediumgray;
+        border-right: 1px solid $mediumgray;
     }
 
-    .itinerary-label {
-        text-transform: uppercase;
+    .itinerary-stop-bottom-bar {
+        background-color: $lightgray;
     }
 }
